// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Column/> renders correctly if prop centered set 1`] = `
<div
  className="ColumnStyled__ColumnStyled-cwlJNT ecmgrB"
  size={
    Object {
      "xsmall": 12,
    }
  }
/>
`;

exports[`<Column/> renders correctly if prop collapsed set false 1`] = `
<div
  className="ColumnStyled__ColumnStyled-cwlJNT czoguW"
  size={
    Object {
      "xsmall": 12,
    }
  }
/>
`;

exports[`<Column/> renders correctly if prop collapsed set true 1`] = `
<div
  className="ColumnStyled__ColumnStyled-cwlJNT bbajaz"
  size={
    Object {
      "xsmall": 12,
    }
  }
/>
`;

exports[`<Column/> renders correctly if prop layoutDirection set horizontal 1`] = `
<div
  className="ColumnStyled__ColumnStyled-cwlJNT cGmyZR"
  size={
    Object {
      "xsmall": 12,
    }
  }
/>
`;

exports[`<Column/> renders correctly if prop layoutDirection set vertical 1`] = `
<div
  className="ColumnStyled__ColumnStyled-cwlJNT czoguW"
  size={
    Object {
      "xsmall": 12,
    }
  }
/>
`;

exports[`<Column/> renders correctly if prop layoutX set center 1`] = `
<div
  className="ColumnStyled__ColumnStyled-cwlJNT czoguW"
  size={
    Object {
      "xsmall": 12,
    }
  }
/>
`;

exports[`<Column/> renders correctly if prop layoutX set end 1`] = `
<div
  className="ColumnStyled__ColumnStyled-cwlJNT czoguW"
  size={
    Object {
      "xsmall": 12,
    }
  }
/>
`;

exports[`<Column/> renders correctly if prop layoutX set space-around 1`] = `
<div
  className="ColumnStyled__ColumnStyled-cwlJNT czoguW"
  size={
    Object {
      "xsmall": 12,
    }
  }
/>
`;

exports[`<Column/> renders correctly if prop layoutX set space-between 1`] = `
<div
  className="ColumnStyled__ColumnStyled-cwlJNT czoguW"
  size={
    Object {
      "xsmall": 12,
    }
  }
/>
`;

exports[`<Column/> renders correctly if prop layoutX set start 1`] = `
<div
  className="ColumnStyled__ColumnStyled-cwlJNT czoguW"
  size={
    Object {
      "xsmall": 12,
    }
  }
/>
`;

exports[`<Column/> renders correctly if prop layoutY set baseline 1`] = `
<div
  className="ColumnStyled__ColumnStyled-cwlJNT czoguW"
  size={
    Object {
      "xsmall": 12,
    }
  }
/>
`;

exports[`<Column/> renders correctly if prop layoutY set center 1`] = `
<div
  className="ColumnStyled__ColumnStyled-cwlJNT czoguW"
  size={
    Object {
      "xsmall": 12,
    }
  }
/>
`;

exports[`<Column/> renders correctly if prop layoutY set end 1`] = `
<div
  className="ColumnStyled__ColumnStyled-cwlJNT czoguW"
  size={
    Object {
      "xsmall": 12,
    }
  }
/>
`;

exports[`<Column/> renders correctly if prop layoutY set start 1`] = `
<div
  className="ColumnStyled__ColumnStyled-cwlJNT czoguW"
  size={
    Object {
      "xsmall": 12,
    }
  }
/>
`;

exports[`<Column/> renders correctly if prop layoutY set stretch 1`] = `
<div
  className="ColumnStyled__ColumnStyled-cwlJNT czoguW"
  size={
    Object {
      "xsmall": 12,
    }
  }
/>
`;

exports[`<Column/> renders correctly if prop size set 1`] = `
<div
  className="ColumnStyled__ColumnStyled-cwlJNT jjVzUG"
  size={
    Object {
      "medium": 6,
      "xsmall": 12,
    }
  }
/>
`;

exports[`<Column/> renders correctly with default props 1`] = `
<div
  className="ColumnStyled__ColumnStyled-cwlJNT czoguW"
  size={
    Object {
      "xsmall": 12,
    }
  }
/>
`;
